[package]
name = "tsg"
version = "0.1.0"
authors = ["no"]
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "build.rs"]

[dependencies]
libc = "0"
nalgebra = "0"
image = "0"
rand = "0"
time = "0"
num = "0"
lazy_static = "*"
rustc-serialize = "0"
byteorder = "0.4"
rmp-serialize = "0"
sha1 = "0"
xml-rs = "0"

[dependencies.glium]
version = "0"
features = []
default-features = false

[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["mixer"]

# [target.x86_64-pc-windows-gnu]
# linker="x86_64-w64-mingw32-gcc"
